<resources>
    <string name="app_name">BrewMate</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="facebook_app_id">3947337535551269</string>
    <string name="title">title</string>
    <string name="price">₹</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="des">TextView</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="gst_tax">GST Tax</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="cart">My Cart</string>
    <string name="apply">Apply</string>
    <string name="coupon">Coupon</string>
    <string name="favourites">Favourites</string>
    <string name="history">History</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="eachprice">Each Price</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="ouantity">Ouantity</string>
    <string name="search_coffee_here">Search coffee here...</string>
    <string name="good_morning">Good Morning</string>
    <string name="grab_your_first_coffee_in_this_morning">Grab your first coffee in this morning</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="brew_based_coffee">Brew Based Coffee</string>
    <string name="available">Available</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo">Photo</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone no</string>
    <string name="save_information">Save Information</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_n_sign_up_here">Don\'t have account?\n Sign Up here</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_nlog_in_here">Already have an Account?\nLog In here</string>
    <string name="home">Home</string>
    <string name="cart_">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="history_">History</string>
    <string name="profile">Profile</string>
    <string name="place_order">Place Order</string>
    <string name="edit_information">Edit Information</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="select">Select</string>
    <string-array name="payment">
        <item>UPI</item>
        <item>Cash On Delivery</item>
    </string-array>
</resources>
