<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_grad"
    tools:context=".Activity.SignInActivity">

    <TextView
        android:id="@+id/txtwel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/lobstertwo_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:text="@string/sign_up_here"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/lobstertwo_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtwel"/>

    <EditText
        android:id="@+id/namebtn"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/user_plus"
        android:drawablePadding="15dp"
        android:drawableTint="@color/black"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lobstertwo_regular"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="15sp"
        app:layout_constraintTop_toBottomOf="@+id/signtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/mailbutn"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lobstertwo_regular"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        app:layout_constraintEnd_toEndOf="@+id/namebtn"
        app:layout_constraintStart_toStartOf="@+id/namebtn"
        app:layout_constraintTop_toBottomOf="@+id/namebtn" />

    <EditText
        android:id="@+id/pwdbutn"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lobstertwo_regular"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="@+id/mailbutn"
        app:layout_constraintStart_toStartOf="@+id/mailbutn"
        app:layout_constraintTop_toBottomOf="@+id/mailbutn" />

    <EditText
        android:id="@+id/numberbutn"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/phone_svgrepo"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lobstertwo_regular"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pwdbutn"
        app:layout_constraintStart_toStartOf="@+id/pwdbutn"
        app:layout_constraintTop_toBottomOf="@+id/pwdbutn" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:fontFamily="@font/lobstertwo_bold_italic"
        android:textSize="22sp"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createbutn" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lobstertwo_italic"
        android:text="@string/continue_with"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googlebutn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitepattern"
        android:drawableStart="@drawable/google"
        android:paddingStart="15sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/lobstertwo_old"
        android:textSize="22sp"
        android:text="@string/google"
        app:layout_constraintEnd_toStartOf="@+id/fbbutn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fbbutn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitepattern"
        android:drawableStart="@drawable/facebook"
        android:paddingStart="15sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/lobstertwo_old"
        android:textSize="22sp"
        android:text="@string/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googlebutn"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createbutn"
        android:background="@drawable/white_bg"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lobstertwo_old"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberbutn" />

    <TextView
        android:id="@+id/alreadyhavebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lobstertwo_italic"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/already_have_an_account_nlog_in_here"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/fbbutn"
        app:layout_constraintStart_toStartOf="@+id/googlebutn"
        app:layout_constraintTop_toBottomOf="@+id/googlebutn" />

</androidx.constraintlayout.widget.ConstraintLayout>